Revert "Apply patch. rdar://problem/58353217"
This reverts commit r254665.

Canonical link: https://commits.webkit.org/218903.72@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254768 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/Configurations/FeatureDefines.xcconfig
+++ b/Source/WebCore/Configurations/FeatureDefines.xcconfig
@@ -188,7 +188,7 @@ ENABLE_GEOLOCATION_iphonesimulator = ENABLE_GEOLOCATION;
 ENABLE_GEOLOCATION_maccatalyst = ENABLE_GEOLOCATION;
 ENABLE_GEOLOCATION_macosx = ENABLE_GEOLOCATION;
 
-ENABLE_GPU_PROCESS = ;
+ENABLE_GPU_PROCESS = ENABLE_GPU_PROCESS;
 
 ENABLE_INDEXED_DATABASE = ENABLE_INDEXED_DATABASE;
 
