--- a/Source/WebKit/Configurations/FeatureDefines.xcconfig
+++ b/Source/WebKit/Configurations/FeatureDefines.xcconfig
@@ -188,7 +188,7 @@ ENABLE_GEOLOCATION_iphonesimulator = ENABLE_GEOLOCATION;
 ENABLE_GEOLOCATION_maccatalyst = ENABLE_GEOLOCATION;
 ENABLE_GEOLOCATION_macosx = ENABLE_GEOLOCATION;
 
-ENABLE_GPU_PROCESS = ;
+ENABLE_GPU_PROCESS = ENABLE_GPU_PROCESS;
 
 ENABLE_INDEXED_DATABASE = ENABLE_INDEXED_DATABASE;
 
