--- a/Source/WebInspectorUI/Configurations/Version.xcconfig
+++ b/Source/WebInspectorUI/Configurations/Version.xcconfig
@@ -2,8 +2,8 @@ MAJOR_VERSION = 610;
 MINOR_VERSION = 1;
 TINY_VERSION = 1;
 MICRO_VERSION = 1;
-NANO_VERSION = 0;
-FULL_VERSION = $(MAJOR_VERSION).$(MINOR_VERSION).$(TINY_VERSION).$(MICRO_VERSION);
+NANO_VERSION = 1;
+FULL_VERSION = $(MAJOR_VERSION).$(MINOR_VERSION).$(TINY_VERSION).$(MICRO_VERSION).$(NANO_VERSION);
 
 // The system version prefix is based on the current system version.
 SYSTEM_VERSION_PREFIX[sdk=iphone*] = 8;
