[CMake] Add SQLite::SQLite3 target https://bugs.webkit.org/show_bug.cgi?id=207005
Reviewed by Don Olmstead.

.:

* Source/cmake/FindSQLite3.cmake: Added.
* Source/cmake/FindSqlite.cmake: Removed.
* Source/cmake/OptionsAppleWin.cmake: Actually use find_package.
* Source/cmake/OptionsFTW.cmake: Sqlite -> SQLite3
* Source/cmake/OptionsGTK.cmake: Sqlite -> SQLite3
* Source/cmake/OptionsPlayStation.cmake: Sqlite -> SQLite3
* Source/cmake/OptionsWPE.cmake: Sqlite -> SQLite3
* Source/cmake/OptionsWinCairo.cmake: Sqlite -> SQLite3

Source/WebCore:

* CMakeLists.txt: Use SQLite3 target.
* PlatformPlayStation.cmake: Remove redundant entries.


Canonical link: https://commits.webkit.org/220040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255475 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -175,7 +175,6 @@ set(WebCore_PRIVATE_INCLUDE_DIRECTORIES
 set(WebCore_SYSTEM_INCLUDE_DIRECTORIES
     ${LIBXML2_INCLUDE_DIR}
     ${LIBXSLT_INCLUDE_DIR}
-    ${SQLITE_INCLUDE_DIR}
     ${ZLIB_INCLUDE_DIRS}
 )
 
@@ -1221,9 +1220,9 @@ set(WebCore_PLUG_INS_RESOURCES
 )
 
 set(WebCore_LIBRARIES
+    SQLite::SQLite3
     ${LIBXML2_LIBRARIES}
     ${LIBXSLT_LIBRARIES}
-    ${SQLITE_LIBRARIES}
     ${ZLIB_LIBRARIES}
     PAL${DEBUG_SUFFIX}
 )
