[CMake] Add _PRIVATE_LIBRARIES to framework https://bugs.webkit.org/show_bug.cgi?id=207004
Reviewed by Konstantin Tokarev.

.:

Use _PRIVATE_LIBRARIES to when creating a WebKit target to specify privately linked
libraries. This fits with the current conventions in WebKit for CMake libraries and
prevents appending to _LIBRARIES with a visibility modifier which likely has
unintended consequences.

* Source/cmake/WebKitMacros.cmake:

Source/JavaScriptCore:

Move uses of PRIVATE within _LIBRARIES to _PRIVATE_LIBRARIES. Any _LIBRARIES appended
afterwards will have that visibility set erroneously.

* PlatformFTW.cmake:

Source/WebKit:

Move uses of PRIVATE within _LIBRARIES to _PRIVATE_LIBRARIES. Any _LIBRARIES appended
afterwards will have that visibility set erroneously.

* CMakeLists.txt:
* PlatformFTW.cmake:
* PlatformGTK.cmake:
* PlatformWin.cmake:

Source/WebKitLegacy:

Move uses of PRIVATE within _LIBRARIES to _PRIVATE_LIBRARIES. Any _LIBRARIES appended
afterwards will have that visibility set erroneously.

* CMakeLists.txt:
* PlatformFTW.cmake:
* PlatformWin.cmake:

Source/WTF:

Move uses of PRIVATE within _LIBRARIES to _PRIVATE_LIBRARIES. Any _LIBRARIES appended
afterwards will have that visibility set erroneously.

* wtf/PlatformFTW.cmake:


Canonical link: https://commits.webkit.org/220053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255491 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -216,19 +216,16 @@ set(WebKit_MESSAGES_IN_FILES
     WebProcess/WebStorage/StorageAreaMap.messages.in
 )
 
-if (${WebCore_LIBRARY_TYPE} STREQUAL STATIC)
-    # Link with WebCore as PRIVATE not to propagate WebCore to all users of WebKit.
-    set(WebKit_LIBRARIES
-        PRIVATE WebCore
-        PUBLIC WebCoreHeaderInterface
-    )
-else ()
+if (${WebCore_LIBRARY_TYPE} STREQUAL SHARED)
     # All users of WebKit need to link WebCore if WebCore is a shared library.
     if (APPLE)
-        set(WebKit_LIBRARIES PRIVATE WebCore)
+        set(WebKit_PRIVATE_LIBRARIES WebCore)
     else ()
-        set(WebKit_LIBRARIES PUBLIC WebCore)
+        set(WebKit_LIBRARIES WebCore)
     endif ()
+else ()
+    set(WebKit_LIBRARIES WebCoreHeaderInterface)
+    set(WebKit_PRIVATE_LIBRARIES WebCore)
 endif ()
 
 set(WebProcess_LIBRARIES
@@ -251,8 +248,8 @@ if (ENABLE_GRAPHICS_CONTEXT_GL)
         list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
             ${LIBEPOXY_INCLUDE_DIRS}
         )
-        list(APPEND WebKit_LIBRARIES
-            PRIVATE ${LIBEPOXY_LIBRARIES}
+        list(APPEND WebKit_PRIVATE_LIBRARIES
+            ${LIBEPOXY_LIBRARIES}
         )
         add_definitions(${LIBEPOXY_DEFINITIONS})
     else ()
@@ -260,16 +257,16 @@ if (ENABLE_GRAPHICS_CONTEXT_GL)
             list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
                 ${OPENGL_INCLUDE_DIRS}
             )
-            list(APPEND WebKit_LIBRARIES
-                PRIVATE ${OPENGL_LIBRARIES}
+            list(APPEND WebKit_PRIVATE_LIBRARIES
+                ${OPENGL_LIBRARIES}
             )
             add_definitions(${OPENGL_DEFINITIONS})
         elseif (USE_OPENGL_ES)
             list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
                 ${OPENGLES2_INCLUDE_DIRS}
             )
-            list(APPEND WebKit_LIBRARIES
-                PRIVATE ${OPENGLES2_LIBRARIES}
+            list(APPEND WebKit_PRIVATE_LIBRARIES
+                ${OPENGLES2_LIBRARIES}
             )
             add_definitions(${OPENGLES2_DEFINITIONS})
         endif ()
@@ -278,8 +275,8 @@ if (ENABLE_GRAPHICS_CONTEXT_GL)
             list(APPEND WebKit_SYSTEM_INCLUDE_DIRECTORIES
                 ${EGL_INCLUDE_DIRS}
             )
-            list(APPEND WebKit_LIBRARIES
-                PRIVATE ${EGL_LIBRARIES}
+            list(APPEND WebKit_PRIVATE_LIBRARIES
+                ${EGL_LIBRARIES}
             )
             add_definitions(${EGL_DEFINITIONS})
         endif ()
@@ -287,7 +284,7 @@ if (ENABLE_GRAPHICS_CONTEXT_GL)
 endif ()
 
 if (ATOMIC_INT64_REQUIRES_LIBATOMIC)
-    list(APPEND WebKit_LIBRARIES PRIVATE atomic)
+    list(APPEND WebKit_PRIVATE_LIBRARIES atomic)
 endif ()
 
 if (UNIX)
@@ -296,7 +293,7 @@ if (UNIX)
         set(CMAKE_REQUIRED_LIBRARIES rt)
         check_function_exists(shm_open SHM_OPEN_REQUIRES_LIBRT)
         if (SHM_OPEN_REQUIRES_LIBRT)
-            list(APPEND WebKit_LIBRARIES PRIVATE rt)
+            list(APPEND WebKit_PRIVATE_LIBRARIES rt)
         endif ()
         unset(CMAKE_REQUIRED_LIBRARIES)
     endif ()
