[CMake] Add Cairo::Cairo target https://bugs.webkit.org/show_bug.cgi?id=207159
Reviewed by Konstantin Tokarev.

.:

* Source/cmake/FindCairo.cmake:
* Source/cmake/OptionsPlayStation.cmake:

Source/WebCore:

* PlatformWinCairo.cmake:
* platform/Cairo.cmake:

Source/WebKit:

* PlatformGTK.cmake:
* PlatformWPE.cmake:
* PlatformWin.cmake:

Source/WebKitLegacy:

* PlatformWin.cmake:

Tools:

* DumpRenderTree/PlatformWin.cmake:
* ImageDiff/Cairo.cmake:
* TestWebKitAPI/PlatformWPE.cmake:
* TestWebKitAPI/PlatformWin.cmake:
* TestWebKitAPI/glib/CMakeLists.txt:
* WebKitTestRunner/PlatformGTK.cmake:
* WebKitTestRunner/PlatformWPE.cmake:
* WebKitTestRunner/PlatformWin.cmake:
* wpe/backends/CMakeLists.txt:


Canonical link: https://commits.webkit.org/220186@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255670 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/wpe/backends/CMakeLists.txt
+++ b/Tools/wpe/backends/CMakeLists.txt
@@ -22,7 +22,6 @@ set(WPEToolingBackends_INCLUDE_DIRECTORIES
 set(WPEToolingBackends_SYSTEM_INCLUDE_DIRECTORIES
     ${ATK_INCLUDE_DIRS}
     ${ATK_BRIDGE_INCLUDE_DIRS}
-    ${CAIRO_INCLUDE_DIRS}
     ${GLIB_INCLUDE_DIRS}
     ${LIBEPOXY_INCLUDE_DIRS}
     ${WPE_INCLUDE_DIRS}
@@ -30,9 +29,9 @@ set(WPEToolingBackends_SYSTEM_INCLUDE_DIRECTORIES
 )
 
 set(WPEToolingBackends_LIBRARIES
+    Cairo::Cairo
     ${ATK_LIBRARIES}
     ${ATK_BRIDGE_LIBRARIES}
-    ${CAIRO_LIBRARIES}
     ${GLIB_LIBRARIES}
     ${LIBEPOXY_LIBRARIES}
     ${LIBXKBCOMMON_LIBRARIES}
